# cloudsine-assignment

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_scan_messages.py
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  explain.py  scans.py
backend/app/services/: gemini.py  scan_service.py  virustotal.py
backend/app/utils/: hashing.py  validation.py
backend/tests/: conftest.py  test_config.py  test_gemini.py  test_hashing.py  test_health.py  test_scan_integration.py  test_scan_service.py  test_validation.py  test_virustotal.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AIExplanation.tsx  ChatThread.tsx  MessageBubble.tsx  RecentScans.tsx  UploadZone.tsx  VendorTable.tsx  VerdictCard.tsx
frontend/src/hooks/: useRecentScans.ts  useScanPoll.ts
scripts/: provision.sh
